[gd_scene load_steps=6 format=3 uid="uid://dgyteunfng7ua"]

[ext_resource type="Script" path="res://src/sharing_is_caring.gd" id="1_vngij"]
[ext_resource type="PackedScene" uid="uid://bkrf7fhefogpy" path="res://Scenes/HUD/HUD.tscn" id="2_nm6qv"]
[ext_resource type="PackedScene" uid="uid://cmuj8b7jrfgb2" path="res://Scenes/tiles/grid.tscn" id="3_kq8im"]
[ext_resource type="PackedScene" uid="uid://cskjvx83suloi" path="res://Scenes/landing_page.tscn" id="4_xsvgf"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_23gan"]
vertices = PackedVector2Array(1013.06, 1016, 13.9609, 1016.99, 10.0313, 12.9375, 1019.93, 7.04688)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, 3, 1030, -3, 1023, 1026, 4, 1027)])

[node name="SharingIsCaring" type="Node2D"]
script = ExtResource("1_vngij")

[node name="Hud" parent="." instance=ExtResource("2_nm6qv")]
z_index = 1
position = Vector2(0, 1)

[node name="Grid" parent="." instance=ExtResource("3_kq8im")]
position = Vector2(0, 387)

[node name="LandingPage" parent="." instance=ExtResource("4_xsvgf")]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
z_index = 2
navigation_polygon = SubResource("NavigationPolygon_23gan")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationRegion2D"]

[connection signal="enlarge_grid" from="Hud" to="Grid" method="_on_enlarge"]
[connection signal="new_village" from="Grid" to="." method="_on_new_village"]
[connection signal="start" from="LandingPage" to="Grid" method="_on_start"]
